# zenclaw

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUTURE_ROADMAP.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
.wwebjs_cache/: 2.3000.1034030014.html
bridge/: bridge.js  package-lock.json  package.json  scrape.js
crates/zenclaw-cli/: Cargo.toml
crates/zenclaw-cli/src/: draft_switch.rs  main.rs  markdown.rs  setup.rs  theme.rs  tui_app.rs  tui_guard.rs  tui_menu.rs  ui.rs
crates/zenclaw-core/: Cargo.toml
crates/zenclaw-core/src/: agent.rs  bus.rs  channel.rs  config.rs  error.rs  lib.rs  memory.rs  message.rs  provider.rs  session.rs  tool.rs
crates/zenclaw-hub/: Cargo.toml
crates/zenclaw-hub/src/: api.rs  lib.rs  metrics.rs  middleware.rs  plugins.rs  router.rs  skills.rs  updater.rs
crates/zenclaw-hub/src/channels/: discord.rs  mod.rs  slack.rs  telegram.rs  whatsapp.rs
crates/zenclaw-hub/src/memory/: mod.rs  rag.rs  sqlite.rs
crates/zenclaw-hub/src/providers/: fallback.rs  mod.rs  openai.rs
crates/zenclaw-hub/src/tools/: code_search.rs  cron.rs  env.rs  filesystem.rs  health.rs  history.rs  indexer.rs  mod.rs  process.rs  shell.rs  subagent.rs  system_info.rs  web_fetch.rs  web_scrape.rs  web_search.rs  webhook.rs
