[workspace]
members = [
    "crates/zenclaw-core",
    "crates/zenclaw-hub",
    "crates/zenclaw-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["baguse <bagus@intelove.com>"]
repository = "https://github.com/volumeee/zenclaw"
description = "ZenClaw — Build AI the simple way. Lightweight AI agent framework for embedded & edge devices."

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
futures = "0.3"

# HTTP & Networking
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.8", features = ["json"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"
dirs = "6"

[profile.release]
opt-level = "z"      # Optimize for size (important for STB/ESP32)
lto = true           # Link-time optimization
codegen-units = 1    # Single codegen unit for max optimization
strip = true         # Strip symbols
panic = "abort"      # Smaller binary, no unwinding
