[package]
name = "zenclaw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, traits, and protocols for ZenClaw AI agent framework"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
