[package]
name = "zenclaw-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZenClaw Hub — full AI agent with providers, tools, and memory"

[dependencies]
zenclaw-core = { path = "../zenclaw-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }
hostname = "0.4"
dirs = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
tempfile = "3"
